<resources>
    <string name="app_name">RGtodU</string>
    <!-- home fragment -->
    <string name="tv_home_msg_add_task">Got something to do?</string>
    <string name="tv_home_welcome">Hello, got somethign to do?</string>
    <string name="btn_home_add_task">Add a task</string>
    <string name="btn_home_view_tasks">View tasks</string>
    <string name="btn_home_view_tasks_list">View tasks (ListView)</string>
    <string name="btn_home_view_a_task">View a task</string>

    <!-- create / edit tasks fragment -->
    <string name="tv_taskName">Task name</string>
    <string name="tv_pomodorosRemaining">Pomodoros remaining</string>
    <string name="tv_status">Status</string>
    <string name="tv_deadline">Deadline</string>
    <string name="btn_action">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_objective">Objective</string>
    <string name="tv_priority">Priority</string>
    <string name="rb_low">low</string>
    <string name="rb_medium">medium</string>
    <string name="rb_high">high</string>
    <string-array name="task_status_array">
        <item>@string/task_status_not_started</item>
        <item>@string/task_status_in_progress</item>
        <item>@string/task_status_completed</item>
    </string-array>

    <string name="task_status_not_started">Not started</string>
    <string name="task_status_in_progress">In progress</string>
    <string name="task_status_completed">Completed</string>

    <!-- view task fragment -->
    <string name="tv_viewPriority">Priority</string>
    <string name="tv_viewStatus">Status</string>
    <string name="tv_viewPomodoros">Pomodoros to completion</string>
    <string name="tv_viewTaskDeadline">Deadline</string>

    <string name="tv_pomodorosRemainingValue">%1$d</string>
    <string name="btn_taskListItemView">View Task</string>
    <string name="btn_view_add_calendar">Add deadline to calendar</string>
    <string name="btn_view_do_task">Give me 25 minutes to do this task</string>

    <string name="btn_delete_task">Delete Task</string>

    <!-- task list item view adapter -->
    <string name="tv_taskListPomodoros">%1$d pomodoros remaining</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="download_error">Error with downloading tasks, sorry.</string>
    <string name="download_error_json">Sorry, error processing the downloaded task list</string>

</resources>