<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTaskFragment">

    <TextView
        android:id="@+id/tv_viewTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Task title" />

    <TextView
        android:id="@+id/tv_viewTaskObjective"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_viewTaskName"
        tools:text='"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat' />

    <TextView
        android:id="@+id/tv_viewPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_viewPriority"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_viewTaskObjective"
        app:layout_constraintTop_toBottomOf="@+id/tv_viewTaskObjective" />

    <TextView
        android:id="@+id/tv_viewPriorityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toEndOf="@+id/tv_viewPriority"
        app:layout_constraintTop_toTopOf="@+id/tv_viewPriority"
        tools:text="high" />

    <TextView
        android:id="@+id/tv_viewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_viewStatus"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_viewPriority"
        app:layout_constraintTop_toBottomOf="@+id/tv_viewPriority" />

    <TextView
        android:id="@+id/tv_viewStatusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/tv_viewStatus"
        app:layout_constraintTop_toTopOf="@+id/tv_viewStatus"
        tools:text="In Progress" />

    <TextView
        android:id="@+id/tv_viewPomodorosRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_viewPomodoros"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_viewPriority"
        app:layout_constraintTop_toBottomOf="@+id/tv_viewStatus" />

    <TextView
        android:id="@+id/tv_viewPomodorosRemainingValue"
        android:layout_width="10dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/tv_viewPomodorosRemaining"
        app:layout_constraintTop_toTopOf="@+id/tv_viewPomodorosRemaining"
        tools:text="10" />

    <TextView
        android:id="@+id/tv_viewTaskDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_viewTaskDeadline"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_view_add_calendar"
        app:layout_constraintStart_toStartOf="@+id/tv_viewPomodorosRemaining"
        app:layout_constraintTop_toTopOf="@+id/btn_view_add_calendar" />

    <TextView
        android:id="@+id/tv_viewTaskDeadlineValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toEndOf="@+id/tv_viewTaskDeadline"
        app:layout_constraintTop_toTopOf="@+id/tv_viewTaskDeadline"
        tools:text="12 Oct 2020" />

    <Button
        android:id="@+id/btn_view_do_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/btn_view_do_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_viewTaskDeadline"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_add_calendar" />

    <Button
        android:id="@+id/btn_view_add_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="@string/btn_view_add_calendar"
        app:layout_constraintStart_toEndOf="@+id/tv_viewTaskDeadlineValue"
        app:layout_constraintTop_toBottomOf="@+id/tv_viewPomodorosRemaining" />



</androidx.constraintlayout.widget.ConstraintLayout>